--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,6 +1,44 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns="https://jakarta.ee/xml/ns/jakartaee"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_5_0.xsd"
-         version="5.0">
+         xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_6_0.xsd"
+         version="6.0">
+    <context-param>
+        <param-name>driver-class</param-name>
+        <param-value>com.mysql.cj.jdbc.Driver</param-value>
+    </context-param>
+    <context-param>
+        <param-name>dbURL</param-name>
+        <param-value>jdbc:mysql://localhost:3306/aad_crud?createDatabaseIfNotExist=true</param-value>
+    </context-param>
+    <context-param>
+        <param-name>dbUserName</param-name>
+        <param-value>root</param-value>
+    </context-param>
+    <context-param>
+        <param-name>dbPassword</param-name>
+        <param-value>Ijse@1234</param-value>
+    </context-param>
+    <servlet-mapping>
+        <servlet-name>Demo</servlet-name>
+        <url-pattern>/health</url-pattern>
+    </servlet-mapping>
+    <servlet>
+        <servlet-name>Demo</servlet-name>
+        <servlet-class>lk.ijse.aad.aad_crud_sample_project.controllers.StudentController</servlet-class>
+        <load-on-startup>1</load-on-startup>
+    </servlet>
+    <context-param>
+        <param-name>aad</param-name>
+        <param-value>Naveen Andry</param-value>
+    </context-param>
+    <context-param>
+        <param-name>vl1</param-name>
+        <param-value>13</param-value>
+    </context-param>
+    <context-param>
+        <param-name>vl2</param-name>
+        <param-value>16</param-value>
+    </context-param>
+
 </web-app>
