adding CORSFilter and updating the configuredOrigin in the web.xml

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -40,5 +40,9 @@
         <param-name>vl2</param-name>
         <param-value>16</param-value>
     </context-param>
+    <context-param>
+        <param-name>origin</param-name>
+        <param-value>http://localhost:63342</param-value>
+    </context-param>
 
 </web-app>
